# aws-itp-poc

./: .env.example  .gitignore  CLAUDE.md  ITP_Bleeding_Prediction_Research_Plan.md  README.md  main.py  pyproject.toml
data/guidelines/: itp_risk_priors_v1.md
plan/: feature-itp-local-strands-agents-1.md  feature-itp-multiagent-strands-1.md
plans/: ITP_Updated_Plan.md  itp_plan_v2.md  itp_plan_v4.md  itp_plan_v5.md  itp_plan_v6.md  itp_plan_v7.md
scripts/: smoke_test_local.py
src/: README.md  utils.py
src/agents/: cohort_lookup_agent.py  guidelines_agent.py  intake_agent.py  risk_reasoner_agent.py  supervisor_agent.py
src/agents/prompts/: cohort_lookup_vi.txt  few_shot_examples_vi.jsonl  guidelines_vi.txt  intake_vi.txt  risk_reasoner_vi.txt  supervisor_vi.txt
src/fixtures/: mock_kb_response.json  sample_clinical_note_vi.txt  synthetic_patients.json
src/tools/: code_exec.py  cohort_similarity.py  comprehend_intake.py  kb_retrieve.py
