[project]
name = "itp-poc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "strands-agents>=0.1.0",
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "rich>=13.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
